directory spacing fixed!

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -189,7 +189,7 @@
 
   .cards {
     display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(320px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(80px, 1fr));
     text-align: left;
   }
 
